--- a/movie_RecSys_simplified_1M_parameters_small_DS.ipynb
+++ b/movie_RecSys_simplified_1M_parameters_small_DS.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Movies RecSys"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, I firt imported a subset of the orginal dataset, representing a 4% (used 1M out of a total of 25M obervations)\n",
+    "The goal, as explained in the README file in this repository, is to create a Recommender System that given historical data on  22.7 million unique users, is capable and does make personalized recommendations to the user.\n",
+    "\n",
+    "In this case, I have added a couple of cells at the end that lets the user to input their favorite movies, and the model will get help from this first input in order to avoid a cold start. \n",
+    "\n",
+    "A different approach, which could be taken is to basically add each new user together with their favorite movies to the existing dataset, and basically get the RecSys to make recommendations based on that. This last option is more straight forward, and definetely somethign to try out. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,8 +39,8 @@
     "file_path2 = '/Users/rogerlbcn/Library/CloudStorage/OneDrive-Personal/Python_Projects/Movies_RecSys_GENERAL/ml-25m/movies.csv'\n",
     "\n",
     "# ratings_df = pd.read_csv(file_path2, nrows=1000000) # NOTE: The kernel doesn't crush with 1M observations\n",
-    "ratings_df = pd.read_csv(file_path1, nrows=1000000) # Using 5 Million observations\n",
-    "movies_df = pd.read_csv(file_path2, nrows=1000000) # Using 5 Million observations"
+    "ratings_df = pd.read_csv(file_path1, nrows=1000000) # Using 1 Million observations\n",
+    "movies_df = pd.read_csv(file_path2, nrows=1000000) # Using 1 Million observations"
    ]
   },
   {
@@ -497,6 +516,111 @@
    ],
    "source": [
     "ratings_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.000025e+06</td>\n",
+       "      <td>1.000025e+06</td>\n",
+       "      <td>1.000025e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.414107e+03</td>\n",
+       "      <td>2.111086e+04</td>\n",
+       "      <td>3.532939e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.924371e+03</td>\n",
+       "      <td>3.907950e+04</td>\n",
+       "      <td>1.057836e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>5.000000e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.751000e+03</td>\n",
+       "      <td>1.136000e+03</td>\n",
+       "      <td>3.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.445000e+03</td>\n",
+       "      <td>2.826000e+03</td>\n",
+       "      <td>3.500000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.108000e+03</td>\n",
+       "      <td>8.370000e+03</td>\n",
+       "      <td>4.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.752000e+03</td>\n",
+       "      <td>2.089390e+05</td>\n",
+       "      <td>5.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             userId       movieId        rating\n",
+       "count  1.000025e+06  1.000025e+06  1.000025e+06\n",
+       "mean   3.414107e+03  2.111086e+04  3.532939e+00\n",
+       "std    1.924371e+03  3.907950e+04  1.057836e+00\n",
+       "min    1.000000e+00  1.000000e+00  5.000000e-01\n",
+       "25%    1.751000e+03  1.136000e+03  3.000000e+00\n",
+       "50%    3.445000e+03  2.826000e+03  3.500000e+00\n",
+       "75%    5.108000e+03  8.370000e+03  4.000000e+00\n",
+       "max    6.752000e+03  2.089390e+05  5.000000e+00"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings_df.describe()"
    ]
   },
   {
